base/comet/storage/nfs/allow-nfs-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nfs-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: csi-driver-nfs
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 2049
          protocol: TCP
        - port: 2049
          protocol: UDP
